@@ -49735,34 +49735,39 @@
             <hobbyvice translate="Weapons (Military)">Weapons (Military)</hobbyvice>
         </hobbiesvices>
     </chummer>
-    <chummer file="gameplayoptions.xml">
-        <gameplayoptions>
-            <gameplayoption>
-                <id>054559be-d80a-42b9-a0a9-d6957d2b3c55</id>
+    <chummer file="settings.xml">
+        <settings>
+            <setting>
+              <id>223a11ff-80e0-428b-89a9-6ef1c243b8b6</id>
                 <name>Standard</name>
                 <translate>スタンダード</translate>
-            </gameplayoption>
-            <gameplayoption>
-                <id>5b1281c0-466d-441d-a844-5a2bc93d9843</id>
+            </setting>
+            <setting>
+              <id>33e5317f-12aa-416e-816e-3b8b6ad95712</id>
                 <name>Prime Runner</name>
                 <translate>プライムランナー</translate>
-            </gameplayoption>
-            <gameplayoption>
-                <id>def8a6aa-4bfa-4c73-a20f-2a8e80d2b1df</id>
+            </setting>
+            <setting>
+              <id>507eef8e-eba8-41ea-84c4-4282258fe669</id>
                 <name>Street Level</name>
                 <translate>ストリート・レベル</translate>
-            </gameplayoption>
-            <gameplayoption>
-                <id>b9d5c0ae-0d2c-4e86-9e09-f42a23ab27a6</id>
-                <name>Street Scum</name>
-                <translate>ストリート・スカム</translate>
-            </gameplayoption>
-            <gameplayoption>
+            </setting>
+            <setting>
+              <id>4c34a8ed-2888-410c-afda-024475fa3c76</id>
+              <name>Street Scum (BCDEE)</name>
+                <translate>ストリート・スカム（ＢＣＤＥＥ）</translate>
+            </setting>
+          <setting>
+            <id>9da22725-0596-4d68-ba2b-54f701e75e74</id>
+            <name>Street Scum (CCDDE)</name>
+            <translate>ストリート・スカム（ＣＣＤＤＥ）</translate>
+          </setting>
+            <setting>
                 <id>e6ac4dae-23bc-4b77-9e00-a6bfdacd0760</id>
                 <name>High Life</name>
                 <translate>High Life</translate>
-            </gameplayoption>
-        </gameplayoptions>
+            </setting>
+        </settings>
     </chummer>
     <chummer file="paragons.xml">
         <categories>
@@ -49883,7 +49888,7 @@
             </range>
             <range>
                 <name>Shotguns (flechette)</name>
-                <translate>ショットガン(フレシェット弾)</translate>
+                <translate>ショットガン（フレシェット弾）</translate>
             </range>
             <range>
                 <name>Sniper Rifles</name>
