@@ -108,8 +108,6 @@
       <DesignTimeSharedInput>false</DesignTimeSharedInput>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="StringExtensions.cs" />
-    <Compile Include="XmlExtensions.cs" />
     <EmbeddedResource Include="TranslateData.resx">
       <DependentUpon>TranslateData.cs</DependentUpon>
     </EmbeddedResource>
@@ -135,6 +133,12 @@
   <ItemGroup>
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.NetAnalyzers.6.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.NetAnalyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.NetAnalyzers.6.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.NetAnalyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Chummer\Chummer.csproj">
+      <Project>{95279469-5a3e-42e6-993c-6a403586c86e}</Project>
+      <Name>Chummer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
